--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@angular/platform-browser": "6.0.4",
     "@angular/platform-browser-dynamic": "6.0.4",
     "@angular/router": "6.0.4",
+    "angular-in-memory-web-api": "^0.6.1",
     "core-js": "2.5.7",
-    "rxjs": "6.2.0",
-    "zone.js": "0.8.26",
     "primeicons": "1.0.0-beta.9",
     "primeng": "6.0.0",
-    "web-animations-js": "2.3.1"
+    "rxjs": "6.2.0",
+    "web-animations-js": "2.3.1",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "6.0.4",
