--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -24,11 +24,15 @@ RUN ng build
 ##############
 FROM nginx:1.13.9-alpine
 
+# Change nginx port
+ENV NGINX_PORT 5000
+
 # Copy artifact build from the 'build environment'
+COPY --from=builder /usr/src/app/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /usr/src/app/dist/primeng-quickstart-cli /usr/share/nginx/html
 
-# Expose port 80
-EXPOSE 80
+# Expose port 5000
+EXPOSE 5000
 
 # Run nginx
 CMD [ "nginx", "-g", "daemon off;" ]
